sfSandBoxCode/force-app/main/default/objects/Recipe_Items__c/Recipe_Items__c.object-meta.xml
<CustomObject>
    <label>Recipe Item</label>
    <nameField>
        <label>Recipe Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>