sfSandBoxCode/force-app/main/default/objects/Recipe_Items__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>