sfSandBoxCode/force-app/main/default/objects/Recipe_Items__c/fields/Quantity_Recipe_line_item__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Recipe_line_item__c</fullName>
    <formula>Ratio__c * Recipe__r.FLI_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Recipe line item</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>