sfSandBoxCode/force-app/main/default/objects/Recipe_Items__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <label>Ratio</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>