sfSandBoxCode/force-app/main/default/objects/Recipe_Items__c/recordTypes/Recipe_items.recordType-meta.xml
<RecordType>
    <fullName>Recipe_items</fullName>
    <active>true</active>
    <label>Recipe items</label>
</RecordType>